@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 91784fdd2ab362b90a4dc97bc5445c72e95e3231 ChangeLog
+SHA1 07ce8e5cdfafdfed20064d58390247e3ffe7335f ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 6a9e98f8601985e05f67deb85094bc080ec9d31f META.yml
-SHA1 441d393fb90384af6f6c6d6d4897b19e9fa15e7a MYMETA.json
-SHA1 6db5d811aa86a1f07b7bb918db305981746f35f9 MYMETA.yml
-SHA1 0bbd6c08d3fcb2a3cff19605fec0ab1a1822c8db Makefile.PL
+SHA1 987fe26315f11d26e08f475bc5b1d392b412a428 META.yml
+SHA1 f413957df75cdf52acef1a95e0cce1505c3975ac MYMETA.json
+SHA1 9e81bbbd737ea2edb913fe6d11c5250a27d3e21e MYMETA.yml
+SHA1 1d376f882a12343a5cb603519d33ae295029581d Makefile.PL
 SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 f1dd82c16fc6894c7949d64c481782cfed7a59b0 install_mozrepl_plugin.ahk
-SHA1 bf069fe11ee89aef862ea1397c7ac368a24fce17 lib/Net/FullAuto.pm
+SHA1 baaf299ac901a6e8a8c45c7e2d86d78f8a3bd139 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,13 +50,13 @@ SHA1 a2540f875220a8c9cb8ce121acdba2940574ad64 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 de20aed635547529bd308e02954df2247198b781 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 5806b579c936d0e8a6eb8844192156722fbfc4d0 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 06a035c034e2ca2b176d8be8661c67a544e2c6b5 lib/Net/FullAuto/FA_Core.pm
+SHA1 02ef59947914f97190dc6c5685bc059b3502569a lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDm4EQACgkQJM3IZYB6aOp8IgCcD3YdKrwjpe+zUsFSiyXLEmNI
-Vm4An0A4QCENZSC823xFZVpucDyI2mfu
-=f3wL
+iEYEARECAAYFAlDofe8ACgkQJM3IZYB6aOr54gCgmHjok2EYhurPFdSUHB68CS8t
+hTIAmgO725UCFfpMhkFYMSOnuoGAH0ti
+=54Bt
 -----END PGP SIGNATURE-----
