@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999962';
+our $VERSION='0.999963';
 
 
 use 5.005;
